--- a/el_futurix/identification.html
+++ b/el_futurix/identification.html
@@ -274,7 +274,7 @@
     </div>
     <script type="module">
 
-        import {update_qr_cnt, getStudentByEmail, getCompetitions, getTeamById, getStudentByqr } from "./reg.js"
+        import {update_qr_cnt, getStudentByEmail, getCompetitions, getTeamById, getStudentByqr } from "./qr_db_op.js"
         import { get_details } from "./login.js"
 
         var team_arr = [];
